--- a/src/blocks/about/a1/template.pug
+++ b/src/blocks/about/a1/template.pug
@@ -1,18 +1,5 @@
-section.conditions
-  .conditions__container
-    h2.conditions__title условия доставки
-    .conditions__content
-      .conditions__content-header
-        .conditions__info
-          span.conditions__info-title от 550 рублей
-          span.conditions__info-subtitle составляет стоимость доставки.
-        .conditions__info
-          span.conditions__info-title от 2 до 14 дней
-          span.conditions__info-subtitle средний срок доставки.
-        .conditions__info
-          span.conditions__info-title в 12:00 мск ежедневно
-          span.conditions__info-subtitle заказы отправляются покупателям.
-      .conditions__content-footer
-        span.conditions__description Точные стоимость и срок зависят от выбранного способа доставки, населенного пункта и размера/веса товара.
-        span.conditions__description Наш менеджер подберет наименее затратный способ доставки.
-        span.conditions__description О прибытии груза Вас оповестят наш менеджер и оператор транспортной компании.
+section.about
+  .about__container
+    .about__wrapper
+      h2.about__title о компании
+      span.about__text ООО «НПК «Стамакс» — российский завод-изготовитель электропастухов. С 2013 года производим и продаем электропастухи «Статик-3М». в Барнауле. Гарантируем лучшие цены и быстрое сервисное обслуживание
