--- a/src/blocks/about/a2/styles.scss
+++ b/src/blocks/about/a2/styles.scss
@@ -1,364 +1,96 @@
 @use 'styles/utils' as ut;
 @use 'styles/variables' as vars;
 
-.guide {
+.documents {
   display: flex;
   justify-content: center;
 
   width: 100%;
 
-  background: #0020d0;
-  padding: 70px 29px 162px 24px;
-
-  @include ut.tablet {
-    padding: 52px 29px 36px 24px;
-  }
-
-  @include ut.desktop {
-    padding: 74px 29px 54px 24px;
-  }
-
-  &__background {
-    display: none;
-
-    @include ut.tablet {
-      display: block;
-      position: absolute;
-      right: 0;
-      width: 553.06px;
-      height: 778.04px;
-      margin: -51px -103px 0 0px;
-    }
-
-    @include ut.desktop {
-      width: 712px;
-      height: 998.04px;
-      margin: -61px -1px 0px 0px;
-    }
-  }
-
   &__container {
     display: flex;
     flex-direction: column;
-    gap: 47px;
+    gap: 30px;
+
+    padding: 60px 0 30px 39px;
 
     width: 100%;
-    max-width: 788px;
+    max-width: 764px;
 
     @include ut.tablet {
-      gap: 49px;
+      padding: 80px 0 40px 0;
     }
 
     @include ut.desktop {
-      gap: 45px;
-      max-width: 1229px;
+      max-width: 1186px;
+      gap: 61px;
+      padding: 90px 0 40px 0;
     }
   }
 
   &__title {
-    margin-left: 15px;
-
     font-style: normal;
     font-weight: 500;
-    font-size: 18px;
-    line-height: 23px;
-
+    font-size: 20px;
+    line-height: 24px;
     text-transform: uppercase;
 
-    color: #ffffff;
+    color: #0020d0;
 
     @include ut.tablet {
+      max-width: 505px;
+
       font-size: 24px;
       line-height: 29px;
     }
 
     @include ut.desktop {
       font-size: 40px;
-      line-height: 58px;
-
-      margin-left: 26px;
+      line-height: 49px;
     }
   }
 
-  &__content {
+  &__slider {
     display: flex;
-    flex-direction: column;
-    gap: 32px;
+    gap: 10px;
+
+    width: 100%;
+    max-width: 100%;
+
+    overflow: auto;
 
     @include ut.tablet {
-      gap: 20px;
+      gap: 15px;
+      overflow: unset;
     }
 
     @include ut.desktop {
-      gap: 49px;
-    }
-
-    &-header {
-      display: flex;
-      flex-direction: column;
-      align-self: flex-start;
-
-      gap: 36px;
-
-      @include ut.tablet {
-        gap: 30px;
-      }
-
-      @include ut.desktop {
-        gap: 40px;
-      }
-    }
-
-    &-footer {
-      display: flex;
-      flex-direction: column;
-      gap: 13px;
-
-      padding: 22px 10px 19px 13px;
-
-      border-radius: 30px;
-      border: 2px solid #ffffff;
-
-      max-width: 404px;
-
-      @include ut.tablet {
-        gap: 22px;
-        padding: 26px 17px 33px 12px;
-
-        .guide__content-title {
-          max-width: 390px;
-        }
-      }
-
-      @include ut.desktop {
-        gap: 14px;
-        padding: 40px 17px 43px 27px;
-        max-width: 627px;
-
-        .guide__content-title {
-          max-width: 481px;
-        }
-      }
-    }
-
-    &-title {
-      // font-family: vars.$druk-wide;
-      font-style: normal;
-      font-weight: 700;
-      font-size: 15px;
-      line-height: 19px;
-
-      text-transform: uppercase;
-
-      color: #ffffff;
-
-      @include ut.tablet {
-        font-family: vars.$druk-cyr;
-        font-size: 16px;
-        max-width: 293px;
-      }
-
-      @include ut.desktop {
-        font-size: 22px;
-        line-height: 27px;
-
-        max-width: 500px;
-      }
-    }
-
-    &-list {
-      display: flex;
-      flex-direction: column;
-
-      gap: 10px;
-    }
-
-    &-text {
-      font-family: vars.$montserrat;
-      font-style: normal;
-      font-weight: 500;
-      font-size: 14px;
-      line-height: 18px;
-
-      color: #ffffff;
-
-      @include ut.desktop {
-        line-height: 24px;
-      }
-
-      @include ut.desktop {
-        font-size: 18px;
-        line-height: 24px;
-      }
+      gap: 22px;
     }
   }
 
-  &__payments {
-    display: flex;
-
-    padding-left: 18px;
-    margin: -5px 0 0 0;
-
-    @include ut.tablet {
-      margin: -16px 0 0 0;
-    }
-    @include ut.desktop {
-      margin: -2px 0 0px -20px;
-    }
-
-    &-icon {
-      max-width: 100px;
-
-      @include ut.desktop {
-        max-width: unset;
-      }
-
-      &_master {
-        @include ut.desktop {
-          width: 168px;
-        }
-      }
-
-      &_visa {
-        margin: 0 0 0 5px;
-
-        @include ut.tablet {
-          width: 55.41px;
-
-          margin: 0 0 0 13px;
-        }
-        @include ut.desktop {
-          width: 84px;
-
-          margin: 0 0 0 5px;
-        }
-      }
-
-      &_mir {
-        margin: 0 0 0 22px;
-
-        @include ut.tablet {
-          width: 76px;
-
-          margin: 0 0 0 24px;
-        }
-        @include ut.desktop {
-          width: 111px;
-
-          margin: 0 0 0 36px;
-        }
-      }
-
-      &_sber {
-        margin: 0 0 0 17px;
-
-        @include ut.tablet {
-          width: 84px;
-
-          margin: 0 0 0 18px;
-        }
-
-        @include ut.desktop {
-          width: 123px;
-
-          margin: 0 0 0 28px;
-        }
-      }
-    }
-  }
-
-  &__case {
-    display: flex;
-    flex-direction: column;
-    gap: 4px;
-    margin-left: 25px;
+  &__slide {
     flex: 0 0 auto;
 
-    &:last-child {
-      gap: 12px;
-
-      @include ut.desktop {
-        gap: 3px;
-      }
-
-      .guide__case-description {
-        gap: 5px;
-      }
-
-      .guide__content-text {
-        width: 290px;
-
-        @include ut.tablet {
-          width: 361px;
-        }
-
-        @include ut.desktop {
-          width: 616px;
-        }
-      }
-    }
+    width: 170px;
+    height: 239px;
 
     @include ut.tablet {
-      justify-content: flex-start;
-      margin-left: 0;
-      gap: 17px;
+      width: 245px;
+      height: 342px;
     }
 
     @include ut.desktop {
-      gap: 8px;
+      width: fit-content;
+      max-width: 386px;
+      height: 518px;
     }
+  }
 
-    &-header {
-      display: flex;
-      align-items: center;
-      gap: 20px;
+  &__image {
+    width: 100%;
+    height: 100%;
 
-      @include ut.tablet {
-        gap: 8px;
-      }
-
-      @include ut.desktop {
-        gap: 10px;
-      }
-    }
-
-    &-icon {
-      width: 30px;
-      height: 30px;
-
-      margin-top: -5px;
-
-      @include ut.desktop {
-        width: 55px;
-        height: 55px;
-      }
-    }
-
-    &-description {
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-
-      margin-top: 5px;
-    }
-
-    &-info {
-      display: flex;
-      flex-direction: column;
-
-      gap: 10px;
-
-      padding-left: 50px;
-
-      @include ut.tablet {
-        max-width: 422px;
-        margin-left: -36px;
-      }
-
-      @include ut.desktop {
-        margin-left: -23px;
-        max-width: 622px;
-      }
-    }
+    object-fit: cover;
   }
 }
