--- a/src/index.pug
+++ b/src/index.pug
@@ -1,20 +1,22 @@
 extends layouts/main/template
 
 block content
+  h1 NOT DONE
   .main
     a(href=`${viewsUrl}/main/index.html`) main
   .main
-    a(href=`${viewsUrl}/404/index.html`) 404
-  .main
     a(href=`${viewsUrl}/about/index.html`) About
+  .main
+    a(href=`${viewsUrl}/item/index.html`) Item
+  h1 DONE
+  .main
+    a(href=`${viewsUrl}/404/index.html`) 404
   .main
     a(href=`${viewsUrl}/catalog/index.html`) catalog
   .main
     a(href=`${viewsUrl}/reviews/index.html`) Reviews
   .main
     a(href=`${viewsUrl}/shipping/index.html`) Shipping
-  .main
-    a(href=`${viewsUrl}/item/index.html`) Item
   .main
     a(href=`${viewsUrl}/contacts/index.html`) Contacts
   .main
