--- a/src/views/shipping/index.pug
+++ b/src/views/shipping/index.pug
@@ -1,3 +1,9 @@
 extends /layouts/main/template
 
 block content
+  include /blocks/shipping/a1/template
+  include /blocks/shipping/a2/template
+  include /blocks/shipping/a3/template
+  include /blocks/shipping/a4/template
+  include /blocks/shipping/a5/template
+  include /blocks/feedback/template
