Add first and second blocks in main page

--- a/src/blocks/main/2info/template.pug
+++ b/src/blocks/main/2info/template.pug
@@ -1,1 +1,23 @@
 section.info
+  .info__container
+    .info__wrapper
+      .info__item
+        .info__item-head
+          img(src=`${icnUrl}/info-star.svg` alt="").info__item-icon
+          h3.info__item-title что такое электропастух?
+        span.info__item-text Проволочное ограждение, на которое генератор подает импульсы тока. Удар током не вредит животному: он отпугивает и вырабатывает рефлекс не приближаться к изгороди. Прибор основан на методических рекомендациях НИИ Охраны природы «По применению электроограждений для животных»
+      .info__item
+        .info__item-head
+          img(src=`${icnUrl}/info-star.svg` alt="").info__item-icon
+          h3.info__item-title как пользоваться электропастухом?
+        span.info__item-text В каждую коробку с прибором мы вкладываем подробную инструкцию. По ссылке можно посмотреть видеоролик с инструкцией
+      .info__item
+        .info__item-head
+          img(src=`${icnUrl}/info-star.svg` alt="").info__item-icon
+          h3.info__item-title безопасность
+        span.info__item-text Электропастух безопасен для людей и животных. Удар током не вредит здоровью, но это всё равно неприятно. Чтобы никто случайно не задел изгородь, все комплекты оснащены предупреждающими знаками
+      .info__item
+        .info__item-head
+          img(src=`${icnUrl}/info-star.svg` alt="").info__item-icon
+          h3.info__item-title Технология «Смарт-Шок»
+        span.info__item-text Наша умная система автоматически подстраивает мощность генератора импульса под конкретную изгородь. Снижено влияние травы. Сила удара током одинакова при любом размере ограждения. Удар происходит только в том случае, если животное коснулось изгороди
