--- a/src/blocks/main/1preview/template.pug
+++ b/src/blocks/main/1preview/template.pug
@@ -1,11 +1,11 @@
 section.preview
-  .preview__content
-    <svg width="428" height="432" class='preview__star' viewBox="0 0 428 432" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path opacity="0.5" fill-rule="evenodd" clip-rule="evenodd" d="M-155 125.656V431.587H441.726L483.192 401.664L396.319 338.976L452.488 247.954L348.136 223.142L365.05 117.645L259.106 134.487L234.189 30.5749L142.783 86.5072L79.829 0L16.8752 86.5072L-74.5314 30.5749L-99.4483 134.487L-155 125.656Z" fill="white"/>
-      <g style="mix-blend-mode:multiply">
-      <path fill-rule="evenodd" clip-rule="evenodd" d="M-155 125.656V431.587H441.726L483.192 401.664L396.319 338.976L452.488 247.954L348.136 223.142L365.05 117.645L259.106 134.487L234.189 30.5749L142.783 86.5072L79.829 0L16.8752 86.5072L-74.5314 30.5749L-99.4483 134.487L-155 125.656Z" fill="#0020D0"/>
-      </g>
-    </svg>
-    .preview__info
+  .preview__container
+    .preview__frame
+      img(src=`${imgUrl}/main/preview-frame-tablet.png` alt="").preview__frame-source.preview__frame-source_tablet
+      img(src=`${imgUrl}/main/preview-frame-desktop.png` alt="").preview__frame-source.preview__frame-source_desktop
+    .preview__star
+    .preview__wrapper
       h2.preview__title электропастух «Статик-3М»
-      span.preview__description Мы — завод-изготовитель электропастухов «Статик-3М» и комплектующих к ним. С 2013 года производим и продаем электропастухи. Гарантируем лучшие цены и быстрое сервисное обслуживание
+      span.preview__text Мы — завод-изготовитель электропастухов «Статик-3М» и комплектующих к ним. С 2013 года производим и продаем электропастухи. Гарантируем лучшие цены и быстрое сервисное обслуживание
+      span.preview__text.preview__text_tablet Мы — завод-изготовитель #[br] электропастухов «Статик-3М» и #[br] комплектующих к ним. С 2013 года #[br] производим и продаем #[br] электропастухи. Гарантируем лучшие #[br] цены и быстрое сервисное #[br] обслуживание
+      span.preview__text.preview__text_desktop Мы — завод-изготовитель #[br] электропастухов «Статик-3М» и #[br] комплектующих к ним. С 2013 года #[br] производим и продаем #[br] электропастухи. Гарантируем #[br] лучшие цены и быстрое сервисное #[br] обслуживание
