--- a/src/blocks/main/3generator/template.pug
+++ b/src/blocks/main/3generator/template.pug
@@ -1,1 +1,35 @@
 section.generator
+  .generator__container
+    .generator__wrapper
+      .generator__head
+        .generator__head-image
+        h2.generator__head-title генератор импульсов «Статик-3м»
+      .generator__list
+        .generator__item
+          .generator__item-preview
+            img(src=`${icnUrl}/generator-star.svg` alt="").generator__item-icon.generator__item-icon_star
+            img(src=`${icnUrl}/generator-cow.svg` alt="").generator__item-icon.generator__item-icon_cow
+          .generator__item-info
+            h3.generator__item-title Заводское изготовление
+            span.generator__item-text Мы предлагаем гарантированно рабочий заводской прибор, успешно прошедший ОТК
+        .generator__item
+          .generator__item-preview
+            img(src=`${icnUrl}/generator-star.svg` alt="").generator__item-icon.generator__item-icon_star
+            img(src=`${icnUrl}/generator-dog.svg` alt="").generator__item-icon.generator__item-icon_dog
+          .generator__item-info
+            h3.generator__item-title работаем с 2015 года
+            span.generator__item-text Многолетний опыт производства. Отдел технического контроля
+        .generator__item
+          .generator__item-preview
+            img(src=`${icnUrl}/generator-star.svg` alt="").generator__item-icon.generator__item-icon_star
+            img(src=`${icnUrl}/generator-shape.svg` alt="").generator__item-icon.generator__item-icon_shape
+          .generator__item-info
+            h3.generator__item-title новые технологии
+            span.generator__item-text Мы используем современные электронные компоненты. Товар сертифицирован в России, Беларуси, Казахстане, Армении и Киргизии
+        .generator__item
+          .generator__item-preview
+            img(src=`${icnUrl}/generator-star.svg` alt="").generator__item-icon.generator__item-icon_star
+            img(src=`${icnUrl}/generator-pig.svg` alt="").generator__item-icon.generator__item-icon_pig
+          .generator__item-info
+            h3.generator__item-title Ваши отзывы делают нас лучше
+            span.generator__item-text Нам важен каждый комментарий, благодаря им мы совершенствуемся. Посмотреть отзывы наших клиентов можно здесь
