Complete main page

--- a/src/views/main/index.pug
+++ b/src/views/main/index.pug
@@ -4,7 +4,12 @@ block content
   include /blocks/main/1preview/template
   include /blocks/main/2info/template
   include /blocks/main/3generator/template
-  include /blocks/main/4catalog/template
+  .main__catalog
+    include /blocks/catalog/template
   include /blocks/main/5reasons/template
   include /blocks/main/6partners/template
   include /blocks/main/7reviews/template
+  include /blocks/advantages/template
+  include /blocks/about/a5/template
+  include /blocks/about/a6/template
+  include /blocks/feedback/template
