--- a/src/blocks/main/3generator/styles.scss
+++ b/src/blocks/main/3generator/styles.scss
@@ -23,6 +23,7 @@
 
     @include ut.desktop {
       max-width: 1440px;
+      padding: 0 0 84px 0;
     }
   }
 
@@ -39,6 +40,7 @@
     }
 
     @include ut.desktop {
+      gap: 50px;
       max-width: 1200px;
     }
   }
@@ -52,6 +54,10 @@
       gap: 50px;
       align-items: center;
       flex-direction: row;
+    }
+
+    @include ut.desktop {
+      gap: 54px;
     }
 
     &-image {
@@ -69,6 +75,10 @@
       }
 
       @include ut.desktop {
+        margin: -199px 0 0px -53px;
+        background-size: cover;
+        height: 688px;
+        width: 709px;
         background-image: url('../../../assets//images/main/generator-background-desktop.png');
       }
     }
@@ -93,6 +103,7 @@
       }
 
       @include ut.desktop {
+        margin: 0 0 86px 0;
         font-size: 40px;
         line-height: 58px;
       }
@@ -113,6 +124,12 @@
 
       padding: 0 0 0 48px;
     }
+
+    @include ut.desktop {
+      padding: 0 0 0 72px;
+      row-gap: 64px;
+      column-gap: 26px;
+    }
   }
 
   &__item {
@@ -126,12 +143,28 @@
       max-width: 329px;
     }
 
+    @include ut.desktop {
+      max-width: 588px;
+    }
+
     &_cow {
       @include ut.tablet {
         gap: 8px;
 
         .generator__item-preview {
           margin: 14px 0 0 0;
+        }
+      }
+
+      @include ut.desktop {
+        gap: 3px;
+
+        .generator__item-title {
+          max-width: 300px;
+        }
+
+        .generator__item-info {
+          margin: 3px 0 0 0;
         }
       }
     }
@@ -154,6 +187,20 @@
           gap: 10px;
         }
       }
+
+      @include ut.desktop {
+        max-width: 475px;
+        gap: 1px;
+
+        .generator__item-info {
+          margin: 4px 0 0 0;
+          gap: 17px;
+        }
+
+        .generator__item-title {
+          max-width: 203px;
+        }
+      }
     }
 
     &_shape {
@@ -169,8 +216,21 @@
 
       @include ut.tablet {
         gap: 13px;
+
         .generator__item-preview {
           margin: 13px 0 0 0;
+        }
+      }
+
+      @include ut.desktop {
+        gap: 6px;
+
+        .generator__item-info {
+          margin: 7px 0 0 0;
+        }
+
+        .generator__item-title {
+          max-width: 200px;
         }
       }
     }
@@ -200,6 +260,23 @@
           gap: 10px;
         }
       }
+
+      @include ut.desktop {
+        max-width: unset;
+
+        .generator__item-title {
+          padding: 19px 0 0 0;
+          max-width: 344px;
+        }
+
+        .generator__item-info {
+          gap: 24px;
+        }
+
+        .generator__item-text {
+          max-width: 360px;
+        }
+      }
     }
 
     &-preview {
@@ -210,6 +287,7 @@
       margin: 24px 0 0 0;
     }
 
+    // ICON
     &-icon {
       &_star {
         width: 27px;
@@ -240,8 +318,10 @@
         }
 
         @include ut.desktop {
-          width: 160px;
+          width: 158px;
           height: 88px;
+
+          margin: -40px 0 0 -92px;
         }
       }
 
@@ -261,6 +341,8 @@
         @include ut.desktop {
           width: 116px;
           height: 110px;
+
+          margin: -62px 0 0px -65px;
         }
       }
 
@@ -278,8 +360,10 @@
         }
 
         @include ut.desktop {
-          width: 233px;
+          width: 130px;
           height: 107px;
+
+          margin: -54px 4px 0 -73px;
         }
       }
 
@@ -299,6 +383,8 @@
         @include ut.desktop {
           width: 107px;
           height: 99px;
+
+          margin: -49px 4px 0 -79px;
         }
       }
     }
@@ -307,6 +393,10 @@
       display: flex;
       flex-direction: column;
       gap: 12px;
+
+      @include ut.desktop {
+        gap: 15px;
+      }
     }
 
     &-title {
@@ -338,6 +428,7 @@
       @include ut.desktop {
         font-size: 18px;
         line-height: 24px;
+        max-width: unset;
       }
     }
   }
